# 3dgs_io

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: docs.yml  pr-check.yml  release.yml  test.yml
docs/: conf.py  index.rst
docs/api/: gltf_io.rst  lidar_2dgs.rst  metadata.rst  spz_io.rst  tiles_export.rst  tiles_io.rst  usdz_metadata.rst  viewer.rst
outputs/2026-06-18/11-40-59/.hydra/: config.yaml  hydra.yaml  overrides.yaml
outputs/2026-06-18/11-41-15/.hydra/: config.yaml  hydra.yaml  overrides.yaml
src/3dgs_io/: __init__.py  __main__.py  _gltf_common.py  _quat.py  cameras.py  cameras_cli.py  converters.py  edit_cli.py  edit_usdz.py  edit_usdz_cli.py  ext_attributes.py  frame_convention.py  gltf_io.py  lidar_2dgs.py  metadata.py  ppisp.py  rig_trajectories.py  scene_bundle.py  scene_bundle_cli.py  scene_usdz.py  scene_usdz_cli.py  spz_io.py  tiles_export.py  tiles_io.py  tracks.py  usdz_io.py  usdz_metadata.py  usdz_tiles_export.py  usdz_tiles_export_cli.py
src/3dgs_io/viewer/: __init__.py  __main__.py  _server.py  index.html
tests/: conftest.py  test_bounding_volume.py  test_cameras.py  test_cameras_cli.py  test_converters.py  test_edit_usdz.py  test_ext_attributes.py  test_gltf_io.py  test_lidar_2dgs.py  test_metadata.py  test_ppisp.py  test_rig_trajectories.py  test_scene_bundle.py  test_scene_usdz.py  test_tiles_export.py  test_tiles_io.py  test_tracks.py  test_usdz_io.py  test_usdz_metadata.py  test_usdz_tiles_export.py  test_viewer.py
tests/data/: tiny_lanelet2.osm
(+3 files in other folders)
